Fix: div overflow
너비에서 넘치는거 막음

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -15,7 +15,7 @@ img {
     box-shadow: 0px 0px 0px black;
 }
 pre {
-    width: 95%;
+    max-width: 95%;
     padding: 10px;
     box-shadow: 1.3px 1px 2px black;
 }
