--- a/_sass/layers.scss
+++ b/_sass/layers.scss
@@ -55,7 +55,7 @@ body {
     }
 }
 .main-layout {
-    width: 100%;
+    width: 96%;
     background-color: $background-color;
     padding: 0px 50px 0px 50px;
     word-wrap: break-word;
